--- a/slides/index.html
+++ b/slides/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/white.css">
+		<link rel="stylesheet" href="./reveal.js/css/reveal.css">
+		<link rel="stylesheet" href="./reveal.js/css/theme/white.css">
 	</head>
 
 	<!-- ----------------------------------- here  -->
@@ -10,12 +10,12 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>Jupyter-notebook slides</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
 		<!--script src="js/reveal.js"></script-->
-		<script src="./reveal.js"></script>
+		<script src="./reveal.js/js/reveal.js"></script>
 		<script>
 			Reveal.initialize();
 		</script>
