--- a/slides/index.html
+++ b/slides/index.html
@@ -10,8 +10,16 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Jupyter-notebook slides</section>
-				<section>Slide 2</section>
+
+                            <section>
+			    Jupyter-notebook slides
+			    <h1 id="Toytree:-a-minimalist-Python-tree-plotting-library">
+			      Toytree: minimalist Python tree plotting library
+			      <a class="anchor-link" href="#Toytree:-a-minimalist-Python-tree-plotting-library">&#182;</a>
+			    </h1>
+			    </section>
+			    
+			    <section>Slide 2</section>
 			</div>
 		</div>
 		<!--script src="js/reveal.js"></script-->
