--- a/slides/index.html
+++ b/slides/index.html
@@ -13,13 +13,18 @@
 
                             <section>
 			    Jupyter-notebook slides
-			    <h1 id="Toytree:-a-minimalist-Python-tree-plotting-library">
+			    <h2 id="Toytree:-a-minimalist-Python-tree-plotting-library">
 			      Toytree: minimalist Python tree plotting library
-			      <a class="anchor-link" href="#Toytree:-a-minimalist-Python-tree-plotting-library">&#182;</a>
-			    </h1>
+			      <a class="anchor-link" href="./toytree/">Toyplot slides</a>
+			    </h2>
 			    </section>
 			    
-			    <section>Slide 2</section>
+			    <section>
+			    <h4>
+			      Phylogenetic invariants slides
+			      <a href="/slides/toytree/index/">PI slides</a>
+			    </h4>
+			    </section>
 			</div>
 		</div>
 		<!--script src="js/reveal.js"></script-->
