--- a/slides/index.html
+++ b/slides/index.html
@@ -1,36 +1,45 @@
 <html>
-	<head>
-		<link rel="stylesheet" href="./reveal.js/css/reveal.css">
-		<link rel="stylesheet" href="./reveal.js/css/theme/white.css">
-	</head>
+    <head>
+        <link rel="stylesheet" href="./reveal.js/css/reveal.css">
+        <link rel="stylesheet" href="./reveal.js/css/theme/white.css">
+    </head>
 
-	<!-- ----------------------------------- here  -->
-	<!-- The slides                                -->
-	<!-- ----------------------------------- here  -->	
-	<body>
-		<div class="reveal">
-			<div class="slides">
+    <body>
+        <div class="reveal">
+            <div class="slides">
 
-                            <section>
-			    Jupyter-notebook slides
-			    <h2 id="Toytree:-a-minimalist-Python-tree-plotting-library">
-			      Toytree: minimalist Python tree plotting library
-			      <a class="anchor-link" href="./toytree/">Toyplot slides</a>
-			    </h2>
-			    </section>
-			    
-			    <section>
-			    <h4>
-			      Phylogenetic invariants slides
-			      <a href="/slides/toytree/index/">PI slides</a>
-			    </h4>
-			    </section>
-			</div>
-		</div>
-		<!--script src="js/reveal.js"></script-->
-		<script src="./reveal.js/js/reveal.js"></script>
-		<script>
-			Reveal.initialize();
-		</script>
-	</body>
+                <section>
+                  Jupyter-notebook slides
+		  <img src="slide-images/Maddison-1997-fig4.png"
+		       alt="Maddison-sptree"
+		       style="width:300px;height:300px">
+                </section>
+
+                <section>
+                    <h2 id="Toytree:-a-minimalist-Python-tree-plotting-library">
+                      Toytree: minimalist Python tree plotting library
+                      <a class="anchor-link" href="/slides/toytree">Toyplot slides</a>
+                    </h2>
+                </section>
+                
+                <section>
+                    <h4>
+                      Phylogenetic invariants slides
+                      <a href="/slides/phylogenetic-invariants"></a>
+                    </h4>
+                    <p>
+                      A simple Python implementation of quartet-tree inference
+                      using the method of <em>phylogenetic invariants</em>. 
+                    </p>
+                </section>
+
+            </div>
+        </div>
+
+        <!--script src="js/reveal.js"></script-->
+        <script src="./reveal.js/js/reveal.js"></script>
+        <script>
+            Reveal.initialize();
+        </script>
+    </body>
 </html>
