img testing in slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -10,9 +10,9 @@
 
                 <section>
                   Jupyter-notebook slides
-		  <img src="slide-images/Maddison-1997-fig4.png"
-		       alt="Maddison-sptree"
-		       style="width:300px;height:300px">
+		  <div>
+		  <img src="slide-images/Maddison-1997-fig4.png" alt="Maddison-sptree">
+		  </div>
                 </section>
 
                 <section>
