smaller image in slide index

--- a/slides/index.html
+++ b/slides/index.html
@@ -11,7 +11,8 @@
                 <section>
                   Jupyter-notebook slides
 		  <div>
-		  <img src="slide-images/Maddison-1997-fig4.png" alt="Maddison-sptree">
+		  <img src="slide-images/Maddison-1997-fig4.png" 
+ 		       alt="Maddison-sptree" style="width=500px">
 		  </div>
                 </section>
 
