ssh tricks slides up

--- a/slides/ssh-tricks/index.html
+++ b/slides/ssh-tricks/index.html
@@ -11991,7 +11991,7 @@ squeue -u adta5102
 <div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-bash"><pre><span></span>&gt;&gt;&gt; srun -p carl.p -t <span class="m">1</span>:00:00 -N <span class="m">1</span> -n <span class="m">4</span> --pty /bin/bash
+<div class=" highlight hl-bash"><pre><span></span>srun -p carl.p -t <span class="m">1</span>:00:00 -N <span class="m">1</span> -n <span class="m">4</span> --pty /bin/bash
 </pre></div>
 
 </div>
@@ -12128,7 +12128,7 @@ conda info
 conda install raxml -c bioconda
 
 <span class="c1">## install some recipes from the ipyrad channel</span>
-conda install bpp -c bioconda
+conda install bpp -c ipyrad
 </pre></div>
 
 </div>
@@ -12321,16 +12321,6 @@ cat jupyter-log-2637903.txt
    Open this address in a browser on <span class="nb">local</span> host<span class="p">;</span> see token below.
    -----------------------------------------------------------------
    localhost:8506  <span class="o">(</span>prepend with https:// <span class="k">if</span> using a password<span class="o">)</span>
-
-<span class="o">[</span>I <span class="m">20</span>:14:58.579 NotebookApp<span class="o">]</span> Serving notebooks from <span class="nb">local</span> directory: /user/adta5102
-<span class="o">[</span>I <span class="m">20</span>:14:58.580 NotebookApp<span class="o">]</span> <span class="m">0</span> active kernels 
-<span class="o">[</span>I <span class="m">20</span>:14:58.580 NotebookApp<span class="o">]</span> The Jupyter Notebook is running at: http://10.151.9.5:8506/?token<span class="o">=</span>039fbda2b6139c8ba4e213e4af1e77662b8091d6714846e1
-<span class="o">[</span>I <span class="m">20</span>:14:58.580 NotebookApp<span class="o">]</span> Use Control-C to stop this server and shut down all kernels <span class="o">(</span>twice to skip confirmation<span class="o">)</span>.
-<span class="o">[</span>C <span class="m">20</span>:14:58.589 NotebookApp<span class="o">]</span> 
-
-    Copy/paste this URL into your browser when you connect <span class="k">for</span> the first time,
-    to login with a token:
-        http://10.151.9.5:8506/?token<span class="o">=</span>039fbda2b6139c8ba4e213e4af1e77662b8091d6714846e1
 </pre></div>
 
 </div>
@@ -12350,7 +12340,7 @@ cat jupyter-log-2637903.txt
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/hjBJw1fY5Uo" frameborder="0" allowfullscreen></iframe>
+<iframe width="750" height="400" src="https://www.youtube.com/embed/hjBJw1fY5Uo" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 </div></section></section>
